--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -1,67 +1,73 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    background-color: black;
-    color: white;
+  width: 100%;
+  background-color: black;
+  color: white;
 }
 
 .menu-toggle {
-  display: none;             /* hide on desktop */
-  font-size: 1.8rem;         /* size of the hamburger */
-  color: white;              /* icon color */
-  cursor: pointer;           /* pointer cursor */
+  display: none;
+  /* hide on desktop */
+  font-size: 1.8rem;
+  /* size of the hamburger */
+  color: white;
+  /* icon color */
+  cursor: pointer;
+  /* pointer cursor */
 }
 
 .navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    /* left + right */
-    align-items: center;
-    padding: 25px 50px;
-    position: fixed;
-    top: 0;
-    background: #d70000;
-    /* dark background */
-    z-index: 1000;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  /* left + right */
+  align-items: center;
+  padding: 25px 50px;
+  position: relative;
+
+  background: #d70000;
+  /* dark background */
+  z-index: 1000;
 
 }
 
 .brand-name h1 {
-    font-weight: 900;
-    font-size: 2rem;
+  font-weight: 900;
+  font-size: 2rem;
 }
 
 .brand-name a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 
 }
 
 .navbar-ul {
-    list-style: none;
-    display: flex;
-    gap: 4rem;
+  list-style: none;
+  display: flex;
+  gap: 4rem;
 }
 
+
 .navbar-ul li a {
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: white;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
+
 }
 
 .navbar-ul li a:hover {
-    border-bottom: 3px solid rgb(225, 87, 2);
-    padding-bottom: 10px;
-    padding-top: 7px;
-    border-radius: 70%;
-    border-top: 3px solid rgb(225, 87, 2);
-    font-size: 1.7rem;
+  border-bottom: 3px solid rgb(252, 252, 252);
+  padding-bottom: 10px;
+  padding-top: 7px;
+  border-radius: 70%;
+  border-top: 3px solid rgb(255, 255, 255);
+
 
 }
 
@@ -71,26 +77,85 @@ body {
 /* Show only on small screens */
 @media (max-width: 768px) {
   .menu-toggle {
-    display: block;          /* show on mobile */
+    display: block;
+    /* show on mobile */
   }
 
   .navbar-ul {
-    display: none;           /* hide menu by default */
-    flex-direction: column;  /* vertical list */
-    background-color: #111;  /* dropdown background */
+    display: none;
+    /* hide menu by default */
+    flex-direction: column;
+    /* vertical list */
+    background-color: #111;
+    /* dropdown background */
     position: absolute;
-    top: 60px;               /* below navbar */
-    right: 0;
-    width: 200px;
+    width: 100%;
+    top: 80px;
+    left: 0;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 0;
+    gap: 0.1rem;
   }
 
   .navbar-ul.active {
-    display: flex;           /* show menu when active */
+    display: flex;
+    /* show menu when active */
   }
 
   .navbar-ul li {
-    margin: 15px 0;          /* spacing between links */
+    margin: 20px 100px;
+    /* spacing between links */
   }
+}
+
+
+.Home {
+  width: 100%;
+  display: flex;
+  margin: 50px 0px;
+
+}
+
+.home-left {
+  width: 40%;
+}
+
+.name {
+  text-align: start;
+  padding-left: 150px;
+  padding-top: 80px;
+
+}
+
+.name .home-span1 {
+  color: #e29d06;
+  font-size: 2rem;
+  
+}
+
+.name h1 {
+  font-size: 5rem;
+  margin: 2rem 0px;
+}
+
+.name .home-span2 {
+  color: #e29d06;
+}
+.name p{
+  font-size: 3rem;
+}
+#typing-animation{
+  letter-spacing: 3px;
+  word-spacing: 10px;
+}
+
+.home-right {
+  width: 60%;
+  text-align: center;
+
+}
+
+.home-right img {
+  width: 60%;
+
 }
