--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -6,7 +6,7 @@
 
 body {
   width: 100%;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 
@@ -29,8 +29,7 @@ body {
   align-items: center;
   padding: 25px 50px;
   position: relative;
-
-  background: #d70000;
+  background-color: rgba(0, 0, 0, 0.873);
   /* dark background */
   z-index: 1000;
 
@@ -53,11 +52,20 @@ body {
   gap: 4rem;
 }
 
+.navbar-ul li {
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.navbar-ul li:hover {
+  transform: scale(1.3);
+}
 
 .navbar-ul li a {
   font-size: 1.5rem;
   text-decoration: none;
   color: white;
+  /* display: inline-block; */
+
 
 }
 
@@ -67,7 +75,6 @@ body {
   padding-top: 7px;
   border-radius: 70%;
   border-top: 3px solid rgb(255, 255, 255);
-
 
 }
 
@@ -112,7 +119,7 @@ body {
 .Home {
   width: 100%;
   display: flex;
-  margin: 50px 0px;
+  margin: 3rem auto;
 
 }
 
@@ -123,30 +130,39 @@ body {
 .name {
   text-align: start;
   padding-left: 150px;
-  padding-top: 80px;
+  padding-top: 40px;
 
 }
 
 .name .home-span1 {
   color: #e29d06;
-  font-size: 2rem;
-  
+  font-size: 1.5rem;
+
 }
 
 .name h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   margin: 2rem 0px;
 }
 
 .name .home-span2 {
   color: #e29d06;
 }
-.name p{
-  font-size: 3rem;
+
+.name #typing-animation {
+  font-size: 2rem;
+  font-weight: 900;
 }
-#typing-animation{
+
+.name .para1 {
+  font-size: 1.9rem;
+  padding-top: 3rem;
+}
+
+#typing-animation {
   letter-spacing: 3px;
   word-spacing: 10px;
+  height: 37.6px;
 }
 
 .home-right {
@@ -159,3 +175,127 @@ body {
   width: 60%;
 
 }
+
+.btn {
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 50px;
+  font-weight: bold;
+}
+
+.btn-1 {
+  margin-top: 2rem;
+  color: black;
+  background-color: rgb(255, 182, 12);
+}
+
+.btn-2 {
+  margin-top: 2rem;
+  margin-left: 10px;
+  color: white;
+  background-color: black;
+  border: 0.5px solid rgb(222, 220, 220);
+
+}
+
+.About {
+  width: 90%;
+  margin: 4rem auto;
+}
+
+.about-us {
+  padding: 0 1.5rem;
+}
+
+.about-us h1 {
+  text-align: center;
+  font-size: 4rem;
+}
+
+
+#hr-1 {
+  width: 90%;
+  height: 5px;
+  /* thickness */
+  margin: 1rem auto;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(to right, red, orange, yellow);
+}
+
+.about-us .para-2 {
+  width: 82%;
+  margin: 2rem auto;
+  font-size: 1.5rem;
+  text-align: justify;
+  color: rgb(222, 220, 220);
+
+}
+
+.about-info {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  margin: 1rem auto;
+
+
+}
+
+.about-info p {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+
+}
+
+.about-topic {
+  width: 30%;
+
+}
+
+.about-topic p {
+  color: white;
+  font-weight: bold;
+  /* font-size: 1rem; */
+}
+
+.about-content {
+  width: 70%;
+  margin-left: 1rem;
+}
+
+.about-content p {
+  color: rgb(222, 220, 220);
+}
+.Experience{
+  width: 80%;
+  margin: 2rem auto;
+}
+.Experience h1 {
+  text-align: center;
+  font-size: 4rem;
+}
+#hr-2 {
+  width: 100%;
+  height: 5px;
+  /* thickness */
+  margin: 1rem auto;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(to right, red, orange, yellow);
+}
+ /* kljdaifojhhhhhhhhhhhhhhhhh */
+
+ .exp-main{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap ;
+  justify-content: center;
+
+}
+ .exp-1{
+  width: 45%;
+  height: 10rem;
+  background-color: red;
+  margin: 2%;
+
+ }
