--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .navbar-ul li:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .navbar-ul li a {
@@ -176,6 +176,7 @@ body {
 
 }
 
+
 .btn {
   font-size: 1rem;
   padding: 1rem 2rem;
@@ -189,6 +190,12 @@ body {
   background-color: rgb(255, 182, 12);
 }
 
+.btn-1 a {
+  text-decoration: none;
+  color: black;
+  ;
+}
+
 .btn-2 {
   margin-top: 2rem;
   margin-left: 10px;
@@ -198,9 +205,15 @@ body {
 
 }
 
+.btn-2 a {
+  text-decoration: none;
+  color: white;
+  ;
+}
+
 .About {
   width: 90%;
-  margin: 4rem auto;
+  margin: 6rem auto;
 }
 
 .about-us {
@@ -266,14 +279,17 @@ body {
 .about-content p {
   color: rgb(222, 220, 220);
 }
-.Experience{
+
+.Experience {
   width: 80%;
-  margin: 2rem auto;
+  margin: 6rem auto;
 }
-.Experience h1 {
+
+.Experience #exp-title {
   text-align: center;
   font-size: 4rem;
 }
+
 #hr-2 {
   width: 100%;
   height: 5px;
@@ -283,19 +299,135 @@ body {
   border-radius: 50px;
   background: linear-gradient(to right, red, orange, yellow);
 }
- /* kljdaifojhhhhhhhhhhhhhhhhh */
 
- .exp-main{
+/* kljdaifojhhhhhhhhhhhhhhhhh */
+
+.exp-main {
   width: 100%;
   display: flex;
-  flex-wrap: wrap ;
+  flex-wrap: wrap;
   justify-content: center;
 
 }
- .exp-1{
-  width: 45%;
-  height: 10rem;
-  background-color: red;
-  margin: 2%;
 
- }
+.exp-1 {
+  width: 45%;
+  height: auto;
+  background-color: rgba(55, 55, 55, 0.467);
+  margin: 2%;
+  border-radius: 10px;
+  border: 1px solid black;
+  box-shadow: 10px 10px 20px rgba(156, 152, 152, 0.373) !important;
+
+
+}
+
+.exp-2 {
+  width: 90%;
+  margin: 2rem auto;
+}
+
+.exp-2 .date {
+  font-size: 2rem;
+  font-weight: bolder;
+  /* margin: 1rem 0; */
+  color: #e29d06;
+}
+
+.exp-2 .position {
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 0.7rem 0;
+}
+
+.exp-2 .company {
+  margin: 0.5rem 0;
+
+  color: rgb(173, 170, 170);
+}
+
+.exp-2 p {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+  color: rgb(173, 170, 170);
+}
+
+.exp-2 ul {
+  width: 80%;
+  margin: 2rem auto;
+  font-size: 1.1rem;
+  color: rgb(173, 170, 170);
+}
+
+.exp-2 ul li {
+  margin-bottom: 1rem;
+  color: rgb(173, 170, 170);
+}
+
+.education {
+  width: 80%;
+  margin: 4rem auto;
+}
+
+#edu-title {
+  text-align: center;
+  font-size: 4rem;
+}
+
+#hr-3 {
+  width: 100%;
+  height: 5px;
+  /* thickness */
+  margin: 1rem auto;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(to right, red, orange, yellow);
+}
+
+.edu-main {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.edu-1 {
+  width: 45%;
+  background-color: rgba(55, 55, 55, 0.467);
+  margin: 2%;
+  border: 1px solid black;
+  border-radius: 15px;
+  box-shadow: 10px 10px 20px rgba(156, 152, 152, 0.373) !important;
+}
+
+.edu-2 {
+  width: 90%;
+  margin: 2rem auto;
+}
+
+.edu-2 .date {
+  font-size: 1.7rem;
+  font-weight: bolder;
+  /* margin: 1rem 0; */
+  color: #e29d06;
+}
+
+.edu-2 .position {
+  font-size: 1.7rem;
+  font-weight: 500;
+  margin: 2rem 0;
+}
+
+.edu-2 .college {
+  margin: 1.8rem 0;
+  font-size: 1.2rem;
+  color: rgb(173, 170, 170);
+}
+
+.edu-2 p {
+  margin: 2.2rem 0;
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+  color: rgb(173, 170, 170);
+}
