--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -84,38 +85,6 @@ body {
 
 
 /* Show only on small screens */
-@media (max-width: 768px) {
-  .menu-toggle {
-    display: block;
-    /* show on mobile */
-  }
-
-  .navbar-ul {
-    display: none;
-    /* hide menu by default */
-    flex-direction: column;
-    /* vertical list */
-    background-color: #111;
-    /* dropdown background */
-    position: absolute;
-    width: 100%;
-    top: 80px;
-    left: 0;
-    padding: 20px;
-    border-radius: 0;
-    gap: 0.1rem;
-  }
-
-  .navbar-ul.active {
-    display: flex;
-    /* show menu when active */
-  }
-
-  .navbar-ul li {
-    margin: 20px 100px;
-    /* spacing between links */
-  }
-}
 
 
 .Home {
@@ -128,6 +97,7 @@ body {
 
 .home-left {
   width: 40%;
+  margin: 1rem auto;
 }
 
 .name {
@@ -176,6 +146,10 @@ body {
 
 .home-right img {
   width: 60%;
+  /* margin: auto  ; */
+  padding: auto 3rem;
+  text-align: center;
+  align-items: center;
 
 }
 
@@ -554,8 +528,9 @@ body {
 .contact-links {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   gap: 2%;
+  margin: 2rem auto;
 }
 
 .contact-1 {
@@ -565,10 +540,10 @@ body {
 }
 
 .contact-1 .icon {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   align-items: center;
-  margin: 1.5rem auto ;
+  margin: 1.5rem auto;
   color: #e29d06;
 
 }
@@ -581,12 +556,45 @@ body {
   margin: 1rem auto;
   align-items: center;
 }
-.contact-1 h3{
+
+.contact-1 h3 {
   font-size: 1.5rem;
   margin: 2rem auto;
 }
-.contact-1 p{
-  font-size: 1.3rem ;
+
+.contact-1 p {
+  font-size: 1.3rem;
   color: rgba(221, 221, 221, 0.479);
 
+}
+
+.channels {
+  text-align: center;
+  align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.channels span {
+  font-size: 2rem;
+  margin: 0 1rem;
+
+}
+
+.channels .contact-icon {
+  width: 30px;
+  height: 30px;
+  margin: 0 1rem;
+  background-color: rgba(196, 197, 198, 0.136);
+  padding: 1rem;
+  border-radius: 50%;
+  color: #e29d06;
+}
+
+.footer {
+  text-align: center;
+  color: rgb(181, 182, 184);
+  padding: 4rem;
+  font-size: 1.3rem;
 }
