--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -1,14 +1,30 @@
 * {
   margin: 0;
   padding: 0;
+  /* max-width: 100%; */
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  /* overflow-x: hidden; */
+
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  /* or your theme color */
+  display: inline-block;
+  /* normal behavior */
+  appearance: none;
+  /* remove input-like rendering */
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 body {
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.649);
   color: white;
+  overflow-x: hidden;
 }
 
 .menu-toggle {
@@ -28,13 +44,17 @@ body {
   justify-content: space-between;
   /* left + right */
   align-items: center;
-  padding: 25px 50px;
-  position: fixed;
+  /* padding: 25px 10px; */
+  position: relative;
   top: 0;
 
   background-color: rgba(0, 0, 0, 0.873);
   /* dark background */
   z-index: 1000;
+  padding: 1.2rem 3rem;
+
+      overflow: visible !important;
+    
 
 }
 
@@ -52,7 +72,7 @@ body {
 .navbar-ul {
   list-style: none;
   display: flex;
-  gap: 4rem;
+  gap: 3rem;
 }
 
 .navbar-ul li {
@@ -67,7 +87,7 @@ body {
   font-size: 1.5rem;
   text-decoration: none;
   color: white;
-  /* display: inline-block; */
+  display: inline-block;
 
 
 }
@@ -76,8 +96,8 @@ body {
   border-bottom: 3px solid rgb(252, 252, 252);
   padding-bottom: 10px;
   padding-top: 7px;
-  border-radius: 70%;
-  border-top: 3px solid rgb(255, 255, 255);
+  /* border-radius: 70%; */
+  /* border-top: 3px solid rgb(255, 255, 255); */
 
 }
 
@@ -98,11 +118,12 @@ body {
 .home-left {
   width: 40%;
   margin: 1rem auto;
+  padding-left: 5rem;
 }
 
 .name {
   text-align: start;
-  padding-left: 150px;
+  /* padding-left: 150px; */
   padding-top: 40px;
 
 }
@@ -135,7 +156,7 @@ body {
 #typing-animation {
   letter-spacing: 3px;
   word-spacing: 10px;
-  height: 37.6px;
+  /* height: 37.6px; */
 }
 
 .home-right {
@@ -531,19 +552,22 @@ body {
   flex-wrap: wrap;
   gap: 2%;
   margin: 2rem auto;
+  text-align: center;
 }
 
 .contact-1 {
   width: 23%;
   /* background-color: #e29d06; */
   text-align: center;
+  align-items: center;
+
 }
 
 .contact-1 .icon {
   width: 70px;
   height: 70px;
   align-items: center;
-  margin: 1.5rem auto;
+  margin: 0rem auto;
   color: #e29d06;
 
 }
@@ -555,6 +579,7 @@ body {
   border-radius: 50%;
   margin: 1rem auto;
   align-items: center;
+  display: flex;
 }
 
 .contact-1 h3 {
