--- a/Task-2/style.css
+++ b/Task-2/style.css
@@ -26,14 +26,14 @@
 .section-title span{
     color: var(--seconday-color);
 }
-
-
-
-
-
-
-
-
+.section-subtitle{
+    font-size:1rem;
+    font-weight: 500;
+    text-align: center;
+}
+img{
+    width: 100%;
+}
 .btn{
     padding: 1rem;
     font-size: 0.9rem;
@@ -114,3 +114,104 @@ header{
     gap: 1rem;
     flex-wrap: wrap; 
 }
+.action-btns .video{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+}
+.action-btns .video .play{
+     height: 50px;
+     width: 50px;
+     display: grid;
+     place-content: center;
+     font-size: 1.5rem;
+     border-radius: 100%;
+     background-color: var(--seconday-color);
+     transition: 0.3s;
+}
+.action-btns .video span{
+    font-size: 1rem;
+    font-weight:600;
+}
+.action-btns .video:hover .play{
+    background-color: var(--secondary-color-dark);
+}
+.about, .project{
+    background-color: var(--text-dark);
+}
+.about-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.about-img, .about-content{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.about-img img{
+    max-width: 350px;
+}
+.about-details{
+    padding: 2rem 0;
+    color: var(--text-light);
+    text-align: center;
+}
+.service, footer{
+    background-color: var(--primary-color);
+}
+.service-grid, .project-grid{
+    display: grid;
+    grid-template-columns:repeat(1,1fr) ;
+    gap: 1rem;
+    margin-top: 5rem;
+}
+.service-card{
+    display: grid;
+    align-items: center;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--text-dark);
+    border-radius: 5px;
+}
+.servoce-card i{
+    font-size: 1.5rem ;
+}
+.service-card h4{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+.service-card p{
+    color: var(--text-light);
+
+}
+.servoce-card .read-more{
+    width: max-content;
+    padding: 0.5rem;
+    color: var(--text-light);
+    font-size: 0.8rem;
+    border-radius: 5px;
+    background-color: rgba(255,255,255,0.05);
+    cursor: pointer;
+}
+.project-card{
+    display: grid;
+    place-content: center;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.project-card img{
+    transition: scale 0.3s;
+
+}
+.project-card:hover img{
+    scale:1.1;
+}
+
+
+
+
