--- a/Task-2/style.css
+++ b/Task-2/style.css
@@ -76,7 +76,7 @@ nav .nav-logo a span{
 }
 header{
     height: 100vh;
-    background-image: url(images.jpeg);
+    background-image: url(assests/headerbg.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -163,7 +163,13 @@ header{
 .service, footer{
     background-color: var(--primary-color);
 }
-.service-grid, .project-grid{
+.service-grid{
+    display: grid;
+    grid-template-columns:repeat(1,1fr) ;
+    gap: 1rem;
+    margin-top: 5rem;
+}
+.project-grid{
     display: grid;
     grid-template-columns:repeat(1,1fr) ;
     gap: 1rem;
@@ -212,6 +218,100 @@ header{
     scale:1.1;
 }
 
+.footer-container{
+     display: grid;
+     grid-template-columns: repeat(1,1fr);
+    gap: 2rem;
+}
 
+.footer-content{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
 
+}
+.footer-details{
+    font-size: 0.8rem;
+    color:var(--text-light);
+    margin: 2rem 0;
+    display: grid;
+    gap: 1rem;
+}
+.social-icons{
+    display: flex;
+    align-items:center ;
+    gap: 1rem;
+}
+.social-icons .icon{
+    padding: 0.5rem;
+    border-radius: 5px;
+    color: #fff;
+    background-color: var(--seconday-color);
+    transition: 0.3s;
+    cursor: pointer;
+}
+.social-icons .icon:hover{
+    background-color: var(--secondary-color-dark);
+}
+.footer-form{
+    display: grid;
+    gap: 1rem;
+}
+.footer-form :is(input,textarea){
+    padding: 1rem;
+    background-color: var(--text-dark);
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+}
+.footer-form textarea{
+    resize: none;
+    
+}
+.footer-form button{
+    width:max-content;
+}
+@media (min-width:640px){
+    .section-title{
+      font-size: 2.5rem;
+    }
+    .header-container p{
+        margin: 2rem 0;
+    }
+    .header-container h1{
+        font-size:4rem;
+        line-height:4rem ;
+    }
+    .action-btns{
+        gap: 2rem;
+    }
+    .about-container{
+       flex-direction: row;
+    }
+    .about-content{
+        align-items:flex-start ;
+    }
+    .about-details{
+        text-align: left;
+    }
+    .service-grid, .project-grid{
+        grid-template-columns: repeat(2,1fr);
+        gap: 2rem;
+    }
+    .footer-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (min-width :768px){
+    .header-container h1{
+        font-size: 5rem;
+        line-height: 5rem;
+
+    }
+    .service-grid, .project-grid{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
 
