--- a/Task-1/query.css
+++ b/Task-1/query.css
@@ -1,5 +1,4 @@
 @media (max-width: 1450px) {
-
     .contact-1 {
         width: 45%;
         /* background-color: #e29d06; */
@@ -63,28 +62,22 @@
 
     .navbar-ul {
         display: none;
-        /* hidden by default */
         flex-direction: column;
         background-color: #111;
-        /* dropdown background */
         position: absolute;
-        /* make it float below navbar */
         top: 70px;
-        /* adjust based on your navbar height */
         left: 0;
         width: 100%;
-        /* full width */
         padding: 1rem 0;
         gap: 0;
         text-align: center;
-        /* center the links */
         z-index: 9999;
     }
 
     .navbar-ul.active {
         display: flex !important;
-        /* show when active */
-        /* z-index: 2000; */
+
+
         overflow-x: visible !important;
         overflow-y: visible !important;
         /* allow dropdowns */
@@ -109,7 +102,7 @@
 
 
     .home-left {
-        padding-left: 3rem;
+        padding-left: 0rem;
     }
 
     .name {
@@ -173,12 +166,7 @@
 
     .exp-2 ul li {
         margin-bottom: 0.9rem;
-
     }
-
-
-
-
 
     .edu-1 {
         width: 100%;
@@ -207,7 +195,36 @@
         font-size: 1.7rem;
     }
 
+    .about-us .para-2 {
+        width: 90%;
+        margin: 2rem auto;
+        font-size: 1.3rem;
+    }
 
+    .about-info2 {
+        gap: 0.5rem;
+        width: 90%;
+        margin: 0.5rem auto;
+    }
+
+    .about-info2 li {
+        display: contents;
+        /* let spans take grid spots */
+        font-size: 1.2rem;
+        margin: 0.7rem 8rem;
+        /* justify-content: space-between; */
+    }
+
+    .about-info2 li span:first-child {
+        font-weight: bold;
+        text-align: left;
+        width: 200px;
+    }
+
+    .about-info2 li span:last-child {
+        text-align: left;
+        width: 80%;
+    }
 }
 
 @media (max-width: 786px) {
@@ -227,7 +244,6 @@
         margin: 0%;
     }
 
-
     .navbar {
         padding: 15px 20px;
         /* smaller padding */
@@ -246,7 +262,35 @@
 
     .more-main h3 {
         font-size: 1.3rem;
+    }
 
+    .About {
+        width: 100%;
+        margin: 3rem auto;
+    }
+
+    .about-us .para-2 {
+        width: 95%;
+        font-size: 1rem;
+    }
+
+    .about-info2 {
+        gap: 0;
+        width: 100%;
+        margin: 0.4rem auto;
+    }
+
+    .about-info2 li {
+        font-size: 1rem;
+        margin: 0.3rem 3REM;
+    }
+
+    .about-info2 li span:first-child {
+        width: 150px;
+    }
+
+    .about-info2 li span:last-child {
+        width: 100%;
     }
 
 }
@@ -255,7 +299,6 @@
     .channels span {
         font-size: 1rem;
         margin: 0 0.5rem;
-
     }
 
     .channels .contact-icon {
@@ -263,11 +306,9 @@
         height: 20px;
         margin: 0 0.5rem;
         padding: 1rem;
-
     }
 
     .Contact {
-
         margin: 3rem auto;
     }
 
@@ -277,7 +318,6 @@
         align-items: center;
         margin: 0rem auto;
         color: #e29d06;
-
     }
 
     .con-back {
@@ -298,7 +338,6 @@
     .contact-1 p {
         font-size: 0.7rem;
         color: rgba(221, 221, 221, 0.479);
-
     }
 
 }
@@ -332,10 +371,35 @@
         margin: 2rem auto;
     }
 
+    .about-us .para-2 {
+        width: 95%;
+        font-size: 0.8rem;
+    }
 
+    .about-info2 {
+        gap: 0;
+        width: 100%;
+        margin: 0.4rem auto;
+    }
+
+    .about-info2 li {
+        font-size: 0.7rem;
+        margin: 0.3rem 1REM;
+
+
+    }
+
+    .about-info2 li span:first-child {
+        width: 120px;
+    }
+
+    .about-info2 li span:last-child {
+
+        width: 100%;
+    }
 }
 
-@media (max-width:425px) {
+@media (max-width:426px) {
     .brand-name h1 {
 
         font-size: 1.5rem;
@@ -387,7 +451,6 @@
 
     .edu-2 .date {
         font-size: 1rem;
-
     }
 
     .edu-2 .position {
@@ -411,9 +474,6 @@
         font-size: 3rem;
     }
 
-
-
-
     .exp-2 .date {
         font-size: 1rem;
     }
@@ -433,7 +493,6 @@
         width: 90%;
         margin: 1rem auto;
         font-size: 0.7rem;
-
     }
 
     .exp-2 ul li {
@@ -441,5 +500,43 @@
 
     }
 
+    .about-us h1 {
+        text-align: center;
+        font-size: 3rem;
+    }
+
+    .about-info2 li {
+        font-size: 0.5rem;
+        margin: 0.3rem 0.5REM;
+    }
+
+    .home-left {
+        padding-left: 0rem;
+    }
+
+    .name .home-span1 {
+        color: #e29d06;
+        font-size: 1.1rem;
+
+    }
+
+    .name h1 {
+        font-size: 3rem;
+        margin: 1rem 0px;
+    }
+
+    .name #typing-animation {
+        font-size: 1.5rem;
+
+    }
+
+    .name .para1 {
+        font-size: 1.4rem;
+        padding-top: 1rem;
+    }
+
+    .footer {
+        padding: 2rem;
+    }
 
 }
